unpackaged/main/default/objects/adroll__Account_Summary__c/adroll__Account_Summary__c.object-meta.xml
<CustomObject>
    <label>RollWorks Advertising</label>
    <nameField>
        <displayFormat>DSA-{0000000}</displayFormat>
        <label>RollWorks Advertising Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Advertising</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>