unpackaged/main/default/objects/adroll__Account_Summary__c/fields/adroll__Conversions__c.field-meta.xml
<CustomField>
    <fullName>adroll__Conversions__c</fullName>
    <formula>adroll__ClickConversion__c + adroll__ViewConversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>