unpackaged/main/default/objects/adroll__Account_Summary__c/fields/adroll__Website__c.field-meta.xml
<CustomField>
    <fullName>adroll__Website__c</fullName>
    <description>Store Acctlvl Tracking Data Domain value</description>
    <externalId>true</externalId>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>